Added nav to settings edit page.

--- a/app/views/settings/show.html.haml
+++ b/app/views/settings/show.html.haml
@@ -1,8 +1,4 @@
-- content_for :nav do
-  %li.first=link_to t(:projects), projects_url
-  %li=link_to t(:sectors), sectors_url
-  %li=link_to t(:partners), partners_url
-  %li=link_to t(:locations), locations_url
+= render :partial => 'nav'
 .block
   .content
     %h2.title=t(:Settings)
