--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -14,8 +14,8 @@
         = f.label :description, :class => 'label'
         = f.text_area :description, :class => 'text_area'
       .field.group
-        = f.label :admin_level_id, :class => 'label'
-        = f.text_field :admin_level_id, :class => 'text_field'
+        = f.label :admin_level, :class => 'label'
+        = f.text_field :admin_level, :class => 'text_field'
   .group.navform.wat-cf
     - content_tag :button, :type => :submit, :class => 'button' do
       = image_tag "icons/tick.png"
