--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -10,4 +10,5 @@
     =link_to t(:new), new_project_event_path(@project), :rel => "external", "data-icon" => "plus", :class => "ui-btn-right"
 
 #content{"data-role" => "content", :style => "height:100%"}
-  #map_canvas{:style => "width:100%; height:100%"}
+  #map{:style => "width:100%; height:100%"}
+    #map_canvas{:style => "width:100%; height:100%"}
