Added sort logic for projects, partners and sectors.

--- a/app/views/partners/index.html.haml
+++ b/app/views/partners/index.html.haml
@@ -1,12 +1,32 @@
 = render :partial => "nav"
 
 - content_for :sidebar do
-  .block
-    -if (can? :create,  Partner)
+  -if (can? :create,  Partner)
+    .block
+      %h3=t(:partners)
       .content
-        %h3=t(:partners)
         .actions-bar.wat-cf
           .actions
             .addlink= link_to t(:create_a_new_partner), new_partner_path, :class => 'button'
+
+  / TODO: Refactor to helper
+  .block
+    %h3=t(:sort_options)
+    .content
+      %ul.navigation
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'name asc') }
+          = link_to_unless(session[:partners_sort_order] == 'name asc', t(:alphabetical_asc), partners_path(:sort_order => 'name asc'))
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'name desc') }
+          = link_to_unless(session[:partners_sort_order] == 'name desc', t(:alphabetical_desc), partners_path(:sort_order => 'name desc'))
+
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'created_at asc') }
+          = link_to_unless(session[:partners_sort_order] == 'created_at asc', t(:created_at_asc), partners_path(:sort_order => 'created_at asc'))
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'created_at desc') }
+          = link_to_unless(session[:partners_sort_order] == 'created_at desc', t(:created_at_desc), partners_path(:sort_order => 'created_at desc'))
+
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'updated_at asc' )}
+          = link_to_unless(session[:partners_sort_order] == 'updated_at asc', t(:updated_at_asc), partners_path(:sort_order => 'updated_at asc'))
+        %li{:class => ("current_sort" if session[:partners_sort_order] == 'updated_at desc')}
+          = link_to_unless(session[:partners_sort_order] == 'updated_at desc', t(:updated_at_desc), partners_path(:sort_order => 'updated_at desc'))
 
 = render @partners
