--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,3 +1,8 @@
+-content_for :head do
+  = stylesheet_link_tag 'wmd/wmd.css', :cache => true
+  = javascript_include_tag 'vendor/wmd/wmd.combined.min', :cache => true
+
+
 = form_for [@project, @event] do |f|
   -if @event.errors.any?
     #error_explanation
@@ -12,7 +17,12 @@
         = f.text_field :title, :class => 'text_field'
       .field.group
         = f.label :description, :class => 'label'
+        #event_description-button-bar
         = f.text_area :description, :class => 'text_area'
+      .field.group
+        %label.label Preview
+        #event_description-preview.markdown_preview
+
       .field.group
         = f.hidden_field :geom, :class => 'hidden_field'
       .field.group
@@ -36,3 +46,11 @@
     - content_tag :button, :type => :submit, :class => 'button' do
       = image_tag "icons/tick.png"
       =t(:save)
+
+:javascript
+  setup_wmd({
+      input: "event_description",
+      button_bar: "event_description-button-bar",
+      preview: "event_description-preview"
+      // output: "copy_html"
+  });
