--- a/app/views/partners/show.html.haml
+++ b/app/views/partners/show.html.haml
@@ -4,7 +4,7 @@
   .content
     = model_title_links(@partner, t="name")
     .inner
-      %p= @partner.description
+      %p= raw(RDiscount.new(@partner.description).to_html) rescue nil
 
 =render @partner.projects
 
