--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -17,7 +17,7 @@
         = f.text_field :name, :class => 'text_field'
       .field.group
         = f.label :description, :class => 'label'
-        #location_description-button-bar
+        #description-button-bar
         = f.text_area :description, :class => 'text_area'
       .field.group
         %label.label Preview
@@ -34,7 +34,7 @@
 :javascript
   setup_wmd({
       input: "location_description",
-      button_bar: "location_description-button-bar",
+      button_bar: "description-button-bar",
       preview: "location_description-preview"
       // output: "copy_html"
   });
