--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -17,7 +17,7 @@
         = f.text_field :title, :class => 'text_field'
       .field.group
         = f.label :description, :class => 'label'
-        #project_description-button-bar
+        #description-button-bar
         = f.text_area :description, :cols => 40, :rows => 10, :class => 'text_area'
       .field.group
         %label.label Preview
@@ -48,7 +48,7 @@
 :javascript
   setup_wmd({
       input: "project_description",
-      button_bar: "project_description-button-bar",
+      button_bar: "description-button-bar",
       preview: "project_description-preview"
       // output: "copy_html"
   });
