--- a/app/views/sectors/_form.html.haml
+++ b/app/views/sectors/_form.html.haml
@@ -1,6 +1,6 @@
 -content_for :head do
-  = stylesheet_link_tag 'wmd/wmd.css', :cache => true
-  = javascript_include_tag 'vendor/wmd/wmd.combined.min', :cache => true
+  = stylesheet_link_tag 'wmd/wmd.css'
+  = javascript_include_tag 'vendor/wmd/wmd.combined.min'
 
 = form_for @sector do |f|
   -if @sector.errors.any?
