--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,13 +1,35 @@
+-content_for :head do
+  =javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false'
+
+- content_for :outer do
+  = stylesheet_link_tag 'map'
+  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
+  = render 'js/show-location-map_js'
+
 = render :partial => "nav"
 
-.block
+
+.project.block
   .content
     = model_title_links(@location, t="name")
     .inner
-      %p= raw(RDiscount.new(@location.description).to_html) rescue nil
+      .columns.wat-cf
+        .column.left
+          %p= raw(RDiscount.new(@location.description).to_html) rescue nil
+        .column.right
+          #map
+            #map_canvas
 
+.content
+  .inner
+    %h1 Projects
 
 =render :partial => 'projects/project', :collection => @location.projects
 
-= link_to raw("&larr; #{t(:back_to_locations)}"), locations_path
+.block
+  .content
+    .inner
+      .actions-bar.wat-cf
+        .actions
+          = link_to raw("&larr; #{t(:back_to_locations)}"), locations_path, :class => "button"
 
