--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
           #footer
             .block
               %p
-                Copyright &copy; #{Time.now.year} nomad labs.
+                Copyright &copy; #{Time.now.year}
         #sidebar
           = yield :sidebar
           -unless( params[:controller] =~ /settings/ || !user_signed_in?)
