Added parent location to index page and set the order.

--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -19,7 +19,7 @@
               .field.group
                 = f.label :locations, :class => 'label'
                 / TODO: Tree Selection
-                = f.select :location_id, Location.all.collect{ |l| ["... "*l.admin_level+"#{l.admin_level} : #{l.name}", l.id ]}, :class => 'select'
+                = f.select :location_id, Location.all(:order => 'created_at asc').collect{ |l| ["... "*l.admin_level+"#{l.admin_level} : #{l.name}", l.id ]}, :class => 'select'
 
               .field.group
                 = f.label :language, :class => 'label'
