removed scoping by project-locations when showing sectors and partners.

--- a/app/views/sectors/show.html.haml
+++ b/app/views/sectors/show.html.haml
@@ -10,7 +10,7 @@
 .content
   .inner
     %h1 Projects
-=render :partial => 'projects/project', :collection => @sector.projects
+=render :partial => 'projects/project', :collection => @projects
 
 .block
   .content
