Added pagination to locations.

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,3 +1,11 @@
 = render :partial => "nav"
 
 = render @locations
+
+.block
+  .content
+    .inner
+      .actions-bar.wat-cf
+        .actions
+          = will_paginate @locations
+      = page_entries_info
