--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -24,7 +24,7 @@
   .inner
     %h1 Projects
 
-=render :partial => 'projects/project', :collection => @location.child_projects
+=render :partial => 'projects/project', :collection => @projects
 
 .block
   .content
