--- a/app/views/js/_show-location-map_js.haml
+++ b/app/views/js/_show-location-map_js.haml
@@ -12,16 +12,51 @@
     var ne = new google.maps.LatLng("#{@location.geom.envelope.upper_corner.y}", "#{@location.geom.envelope.upper_corner.x}");
     var mapBounds = new google.maps.LatLngBounds(sw, ne); // LatLngBounds(sw?:LatLng, ne?:LatLng)
     var mapOptions = {
-      zoom: 8,
+      zoom: 6,
       center: center,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
+      mapTypeId: google.maps.MapTypeId.TERRAIN,
+      zoomControlOptions: {
+            style: google.maps.ZoomControlStyle.SMALL
+      }
     };
     map = new google.maps.Map($('#map_canvas')[0], mapOptions);
-    map.fitBounds(mapBounds);
+    // map.fitBounds(mapBounds);
+
+    var fullScreenControlDiv = document.createElement('DIV');
+    var fullScreenControl = new ToggleFullScreen(fullScreenControlDiv, map);
+
+    fullScreenControlDiv.index = 1;
+    map.controls[google.maps.ControlPosition.LEFT_TOP].push(fullScreenControlDiv);
+
     $.getJSON(pathname+'.json', function(geojson) {
       province = new GeoJSON(geojson, null);
       province.setMap(map);
-      // TODO: set the zoom level based on the extent of the province
     });
+
+    geojson = #{Project.events_to_feature_collection(@projects).to_json};
+    $.each(geojson.features, function(i, feature) {
+      var event_marker = new GeoJSON(feature.geometry, null);
+      event_marker.setAnimation(google.maps.Animation.DROP);
+      event_marker.setMap(map);
+      var content_string = renderJSONEvent(feature.properties);
+      var info_window = new google.maps.InfoWindow({content: content_string});
+      google.maps.event.addListener(event_marker, 'click', function() {
+        info_window.open(map, event_marker);
+      });
+    })
+
+    // TODO: CHECK: Instead of the above, AJAX is also possible see routes.rb - not sure which is faster though
+    // $.getJSON(pathname+'/events.json', function(geojson) {
+    //   $.each(geojson.features, function(i, feature) {
+    //     var event_marker = new GeoJSON(feature.geometry, null);
+    //     event_marker.setAnimation(google.maps.Animation.DROP);
+    //     event_marker.setMap(map);
+    //     var content_string = renderJSONEvent(feature.properties);
+    //     var info_window = new google.maps.InfoWindow({content: content_string});
+    //     google.maps.event.addListener(event_marker, 'click', function() {
+    //       info_window.open(map, event_marker);
+    //     });
+    //   })
+    // });
 
   })
