--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -4,7 +4,7 @@
     .inner
       %h2 Recent Events
       %ul.list
-        = render :partial => 'events/event', :collection => project.events.desc, :locals => {:project=>project}
+        = render :partial => 'events/event', :collection => project.events, :locals => {:project=>project}
 
       -if (can? :create,  Event)
         .actions-bar.wat-cf
