--- a/app/views/js/_show-location-map_js.haml
+++ b/app/views/js/_show-location-map_js.haml
@@ -42,6 +42,9 @@
       var info_window = new google.maps.InfoWindow({content: content_string});
       google.maps.event.addListener(event_marker, 'click', function() {
         info_window.open(map, event_marker);
+        jQuery(function($){
+            $('a.zoombox').zoombox();
+        });
       });
     })
 
