--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -1,5 +1,5 @@
 = stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", "map", :cache => true
-= stylesheet_link_tag 'zoombox/zoombox', :cache => true
+= stylesheet_link_tag 'zoombox/zoombox'
 = stylesheet_link_tag 'print', :media => 'print'
 
 = javascript_include_tag :defaults, :cache => true
