Added custom validation for event's address geocoding.

--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -181,4 +181,60 @@ li.wmd-button.wmd-code-button{
   font-size: 18px;
 }
 
-/* FIXME: li in block content have horizontal margins under them */
+#notice {
+  color: green;
+}
+
+/* Form error messages */
+.form div.field_with_errors label.label {
+  display: inline;
+}
+
+.form .field_with_errors .error {
+  color: red;
+}
+
+
+/* Form error messages */
+#error_explanation {
+  color: #666;
+  border: 1px solid #ffbbbb;
+  background-color: #ffdddd;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+}
+
+
+/*.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}*/
+
+/*#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}*/
+
+#error_explanation h2 {
+  /*text-align: left;*/
+  /*font-weight: bold;*/
+  /*padding: 5px 5px 5px 15px;*/
+  font-size: 14px!important;
+  /*margin: -7px;*/
+  /*margin-bottom: 0px;*/
+  /*background-color: #c00;*/
+  color: #c00;
+}
+
+#error_explanation ul li {
+  color: #666;
+  font-size: 12px;
+  list-style: square;
+  margin-left: 30px;
+  padding-bottom: 5px;
+}
