--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -8,7 +8,7 @@
     #error_explanation
       %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
       %ul
-        - @event.errors.full_messages.each do |msg|
+        - @event.errors.values.flatten.each do |msg|
           %li= msg
   .columns.wat-cf
     .column.left
