--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -3,7 +3,7 @@
 
 - content_for :outer do
   = stylesheet_link_tag 'map'
-  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
+  = javascript_include_tag 'vendor/GeoJSON', 'vendor/markerclusterer_packed', 'map-helpers'
   = render 'js/show-location-map_js'
 
 = render :partial => "nav"
